feat: add users endpoints (#15)
* fix: fix openapi base-path

* feat: migrate auth controller to contract first

* fix: fix nullability in openapi

* chore: move jwt to security folder

* feat: add /me and /users endpoints

* feat: add controller advice

* fix: fix security issue with shared singleton for myitmo

---------
