# src/main/kotlin/ru/itmo/dws/itmotrip/dto/RefreshRequestDto.kt
@@ -1,5 +1,0 @@
-package ru.itmo.dws.itmotrip.dto
-
-data class RefreshRequestDto(
-    val refreshToken: String,
-)
